--- a/src/app/kindergarden/kindergarden.component.html
+++ b/src/app/kindergarden/kindergarden.component.html
@@ -6,6 +6,10 @@
     <input type="tel" placeholder="Telephone No." [(ngModel)]="kindergarden.phone">
     <button (click)="updateKindergarden()">Save</button>
   </div>
+  <div class="phone-setting">
+    <input type="text" placeholder="Sim Serial No." [(ngModel)]="kindergarden.simSerialNumber">
+    <button (click)="updateKindergarden()">Save</button>
+  </div>
   <button md-mini-fab color="primary" (click)="addKid(kindergarden.$key)">
     <md-icon class="md-24">
       <span style="color: white; position: relative;bottom: 5px;">+</span>
