--- a/src/app/setttings/settings.component.html
+++ b/src/app/setttings/settings.component.html
@@ -14,6 +14,19 @@
 
   <div>
     <md-input-container>
+      <input md-input placeholder="Clear entrance hour (24)" [(ngModel)]="settings.clearEntrances" >
+    </md-input-container>
+  </div>
+
+
+  <div>
+    <md-input-container>
+      <input md-input placeholder="SMS Period" [(ngModel)]="settings.notificationPeriod" >
+    </md-input-container>
+  </div>
+
+  <div>
+    <md-input-container>
       <input md-input placeholder="Restart" [(ngModel)]="settings.restart" >
     </md-input-container>
   </div>
