--- a/src/app/kindergarden/kindergarden.component.less
+++ b/src/app/kindergarden/kindergarden.component.less
@@ -2,16 +2,22 @@
   display: flex;
   flex-direction: column;
 }
-.phone-setting{
-  button,input {
-    float: right;
+.inputs {
+  input {
+    display: block;
+    width: 50%;
+    margin: 5px 0px;
+    height: 20px;
   }
   button{
-    margin-right: 5px;
+    width: 200px;
+    height: 20px;
   }
-
 }
 
+.add-btn{
+  margin-top: 10px;
+}
 
 .header {
   padding: 5px;
