--- a/src/app/kindergarden/kindergarden.component.html
+++ b/src/app/kindergarden/kindergarden.component.html
@@ -7,12 +7,12 @@
     <input type="text" placeholder="Sim Serial No." [(ngModel)]="kindergarden.simSerialNumber">
     <input type="text" placeholder="group" [(ngModel)]="kindergarden.group">
     <input type="text" placeholder="info" [(ngModel)]="kindergarden.info">
-    <button (click)="updateKindergarden()">Save</button>
+    <button (click)="updateKindergarden()" *ngIf="firebase.admin">Save</button>
   </div>
 
 
 
-  <button class="add-btn" md-mini-fab color="primary" (click)="addKid(kindergarden.$key)">
+  <button class="add-btn" md-mini-fab color="primary" (click)="addKid(kindergarden.$key)" *ngIf="firebase.admin">
     <md-icon class="md-24">
       <span style="color: white; position: relative;bottom: 5px;">+</span>
     </md-icon>
@@ -30,7 +30,7 @@
       <img class="kid_img" src="{{item.image}}">
       <h2>{{item.name}}</h2>
       <button class="kinder-btn" (click)="editKid(item.$key,kindergarden.$key)">ערוך</button>
-      <button class="kinder-btn" (click)="removeKid(item.$key,kindergarden.$key)">הסר</button>
+      <button class="kinder-btn" (click)="removeKid(item.$key,kindergarden.$key)" *ngIf="firebase.admin">הסר</button>
     </div>
   </div>
   <div class="footer">
