--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,12 @@
 <div class="main">
   <div class="header">
     <h1>גנים</h1>
-    <div class="settings" (click)="settings()">
+    <div class="settings" (click)="settings()" *ngIf="firebase.admin">
       <img src="../../icons/settings.png">
     </div>
   </div>
 
-  <button md-mini-fab color="primary" (click)="add()">
+  <button md-mini-fab color="primary" (click)="add()" *ngIf="firebase.admin">
     <md-icon class="md-24">
       <span style="color: white; position: relative;bottom: 5px;">+</span>
     </md-icon>
@@ -17,8 +17,8 @@
 
         <div *ngIf="!item.editMode" class="view" (click)="selectKindergarden(item)">
           <h3>{{item.name}}</h3>
-          <div>
-            <span class="kid-btn" (click)="edit(item,$event)">edit</span>
+          <div *ngIf="firebase.admin">
+            <span class="kid-btn" (click)="edit(item,$event)" >edit</span>
             <span class="kid-btn" (click)="delete(item,$event)">delete</span>
           </div>
         </div>
